docs/api/qiskit-c/2.1/index.mdx
---
title: Qiskit SDK C API API documentation (v2.1)
description: Index of all the modules in qiskit-c v2.1.
---

<span id="qiskit-c-api-qiskit-h" />

<span id="c-api" />

# Qiskit C API (`qiskit.h`)

The Qiskit C API is a low level interface to the core data model of Qiskit. It is designed to provide a high performance interface to Qiskit for compiled languages and provides a defined ABI to the internal Rust data model that is used to create the Python API. There are two expected modes of operation for the C API:

*   A standalone shared library for creating and working with Qiskit objects from compiled languages without a runtime dependency on Python, and
*   For building Python extensions that are using Qiskit but interface directly with the Rust objects from the extension code without using Python for better performance.

To get started, see [Install the Qiskit C API](/docs/guides/install-c-api). To combine the C API with custom Python extensions, see [Extend Qiskit in Python with C](/docs/guides/c-extension-for-python).

As this interface is still new in Qiskit it should be considered experimental and the interface might change between minor version releases.

## Quantum Circuit

*   [QkCircuit](qk-circuit)
*   [QkQuantumRegister](qk-quantum-register)
*   [QkClassicalRegister](qk-classical-register)

## Quantum information

*   [QkObs](qk-obs)
*   [QkObsTerm](qk-obs-term)
*   [QkBitTerm](qk-bit-term)
*   [QkComplex64](qk-complex-64)
*   [QkExitCode](qk-exit-code)
*   [QkTarget](qk-target)
*   [QkTargetEntry](qk-target-entry)

